2020-10-04  Markus Gans  <guru.mail@muenster.de>
	* Replaces some C-style arrays with std::array
	* Now you can use the arrow keys to move a window into the visible area
	* Removes FData memory leak in FListBoxItem and FListViewItem

2020-09-27  Markus Gans  <guru.mail@muenster.de>
	* An explanation of the widget tree was added to the document 
	  of the first steps

2020-09-26  Markus Gans  <guru.mail@muenster.de>
	* FData improvements
	* The number of FObject children can now be limited with 
	  setMaxChildren()
	* FApplication can now have no more than one child widget

2020-09-25  Markus Gans  <guru.mail@muenster.de>
	* std::clog now streams everything to the FLogger object
	* Added a unit test for the FData class

2020-09-23  Markus Gans  <guru.mail@muenster.de>
	* Bugfix: empty FString() + wchar_t

2020-09-22  Markus Gans  <guru.mail@muenster.de>
	* Bugfix in FDialog::setSize(): Automatic size adjustment and 
	  simultaneous widget movement are now possible.

2020-09-18  Markus Gans  <guru.mail@muenster.de>
	* The generic data type FDataPtr is now deprecated and was 
	  completely replaced by the template class FData

2020-09-11  Markus Gans  <guru.mail@muenster.de>
	* Fixes a problem with mouse input in Cygwin in non-blocking read mode

2020-09-08  Markus Gans  <guru.mail@muenster.de>
	* Speed up the reaction time of the gpm mouse
	* FListView now correctly adjusts the size of the scrollbar, 
	  when expanding and collapsing by double-clicking

2020-08-30  Markus Gans  <guru.mail@muenster.de>
	* Adding Windows Terminal detection

2020-08-15  Markus Gans  <guru.mail@muenster.de>
	* The call of the function setNonBlockingRead() resulted in 
	  a high CPU load in idle mode. 
	  Thanks to Pavel Stehule for reporting this problem.

2020-08-11  Markus Gans  <guru.mail@muenster.de>
	* New callback backend was implemented. Callback functions with any 
	  number of arguments are now possible.

2020-07-19  Markus Gans  <guru.mail@muenster.de>